fix(igx-tabbar): add content width restriction to align text content https://github.com/IgniteUI/igniteui-angular/issues/671

--- a/templates/angular/igx-ts/tabbar/default/files/src/app/__path__/__name__.component.css
+++ b/templates/angular/igx-ts/tabbar/default/files/src/app/__path__/__name__.component.css
@@ -1,5 +1,6 @@
 .tab-content {
     padding: 16px;
+    max-width: 700px;
 }
 
 .header{
